#[profile.release]
#opt-level = 1
#lto = true
#codegen-units = 1

[package]
name = "userv"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.13"
sysinfo = "0.28"
sys-info = "0.9"
raw-cpuid = "10.6.0"
serde_json = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
chrono = "0.4"
nvml-wrapper = "0.9.0"
log = "0.4"
log4rs = "0.9"