#[profile.release]
#opt-level = 3
#lto = true
#codegen-units = 1

[package]
name = "userv"
version = "0.1.5"
edition = "2021"
description = "Program design to retrieve and compute machine information"

[dependencies]
sysinfo = "0.29"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
chrono = "0.4"
nvml-wrapper = "0.10"
log = "0.4"
log4rs = "1.3"
openssl = { version = "0.10", features = ["vendored"] }