[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package]
name = "userv"
version = "0.1.5"
edition = "2021"
description = "Program design to retrieve and compute machine data"

[dependencies]
log = "0.4"
log4rs = "1.3"
clap = { version = "4.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }

board = { path = "src/probes/board" }
cpu = { path = "src/probes/cpu" }
gpu = { path = "src/probes/gpu" }
memory = { path = "src/probes/memory" }
network = { path = "src/probes/network" }
storage = { path = "src/probes/storage" }
system = { path = "src/probes/system" }

gui_web = { path = "src/gui/web" }