[package]
name = "board"
version = "0.1.0"
edition.workspace = true
description = "Sub-module for main board / motherboard analysis"

[dependencies]
core.workspace = true

chrono.workspace = true
log.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
sysinfo.workspace = true