[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
description = "Sub-module for storage devices analysis"

[dependencies]
core.workspace = true

chrono.workspace = true
libc.workspace = true
log.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
sysinfo.workspace = true