[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "Program for storage devices analysis"

[dependencies]
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35"
chrono = "0.4"
regex = "1.11"
rusqlite = "0.36"

core = { path = "../../core" }